--- a/.github/workflow/workflow.yml
+++ b/.github/workflow/workflow.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run Push Action
-        uses: ./.github/actions/my-custom-action
+        uses: ./.github/actions/push
