--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -15,3 +15,19 @@ jobs:
       
       - name: Run My Custom Action
         uses: ./.github/actions/my-custom-action
+
+on:
+  pull_request:
+    branches:
+      - main
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      
+      - name: Run My Custom Action Pull
+        uses: ./.github/actions/my-custom-action
