--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,5 +1,7 @@
+name: My Workflow
+
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -11,5 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      - name: Run My Custom Action Pull
-        uses: ./.github/actions/my-custom-action
+      - name: Run My Custom Action
+        uses: ./.github/actions
+
