--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      - name: Run My Custom Action
+      - name: running push request script
         uses: ./.github/actions
-
+        with:
+          file: ./.github/pullRequest/pull.yml
+          matrix:
+            org: 
+              -org1
+              -org2
+              -org3
