--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -13,5 +13,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
       
-      - name: running push request script
+      - name: Run My Custom Action
         uses: ./.github/actions
+
