--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,5 +14,6 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run My Custom Action
-        uses: ./.github/actions
+        run: sed -i 's/color/colour/g' ./github/config.yml
+        # uses: ./.github/actions
 
