--- a/.github/actions/config.yml
+++ b/.github/actions/config.yml
@@ -1,1 +1,5 @@
-Colors are fascinating. The world is full of color, from the vibrant green of the forests to the deep blue of the oceans. Colorful flowers bloom in every hue imaginable, and each season brings its own palette of colors. Exploring the world of color is an endless adventure.
+name: 'push request script'
+description: 'An action that echoes a message'
+runs:
+  using: 'node12'
+  main: 'index.js'
