--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,6 +14,6 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run My Custom Action
-        run: sed -i 's/color/colour/g' ././github/actions/config.yml
+        run: sed -i 's/push/colour/g' ./github/actions/config.yml
         # uses: ./.github/actions
 
