testing the push action

--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -16,5 +16,6 @@ jobs:
       - name: Run My Custom Action
         run: |
           sed -i 's/push/colour/g' ./.github/workflows/config.yml
+          cat ./.github/workflows/config.yml
         # uses: ./.github/actions
 
