--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,8 +14,11 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run My Custom Action
-        run: |
-          sed -i 's/push/colour/g' ./.github/workflows/config.yml
-          cat ./.github/workflows/config.yml
+        with:
+          path: ./.github/workflows/config.yml
+          oldString: push
+          oldStringWin: push
+          newString: --_
+          showFileContent: true
         # uses: ./.github/actions
 
