--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run My Custom Action
-        run: sed -i 's/push/colour/g' ./.github/workflows/config.yml
-        # uses: ./.github/actions
+        with:
+          find: "push"
+          replace: "world"
+          include: "**config"
 
