--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,7 +14,7 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "name"
-          replace: "world"
+          replace: "push"
           include: "**config" # Update to match the exact name of your file
 
 
