--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -9,13 +9,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@v3
-        with:
-          find: "name"
-          replace: "push"
-          include: "**config" # Update to match the exact name of your file
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Replace specific word in file
+        run: |
+          # Replace 'word_to_replace' with 'replacement_word' in file.txt
+          sed -i 's/name/workes/g' ./.github/workflows/config.yml
+
+      - name: Commit changes
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add .
+          git commit -m "Replace specific word in file.txt"
+          git push
 
 
 
