--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,29 +1,34 @@
-name: My Workflow
+name: Replace Words in YAML
 
 on:
   push:
     branches:
       - main
 
+  workflow_dispatch: # <-- This is needed for manual triggering
+    inputs:
+      filename:
+        description: 'YAML file name'
+        required: true
+      word_to_replace:
+        description: 'Word to replace'
+        required: true
+      new_word:
+        description: 'New word'
+        required: true
+
 jobs:
-  build:
+  replace-words:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Replace specific word in file
+      - name: Replace words in YAML
         run: |
-          # Replace 'word_to_replace' with 'replacement_word' in file.txt
-          sed -i 's/name/workes/g' ./.github/workflows/config.yml
+          FILENAME=$1
+          WORD_TO_REPLACE=$2
+          NEW_WORD=$3
 
-      - name: Commit changes
-        run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
-          git add .
-          git commit -m "Replace specific word in config.yml"
-          git push
-
-
-
+          sed -i "s/${WORD_TO_REPLACE}/${NEW_WORD}/g" $FILENAME
