--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -18,4 +18,4 @@ jobs:
         run: |
           
 
-          sed -i "s/${main}/${NEW_WORD}/g" ./github/workflows/config.yml
+          sed -i "s/${main}/${NEW_WORD}/g" config.yml
