testing pushRequest.yml solutin

--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -16,6 +16,6 @@ jobs:
 
       - name: Replace words in YAML
         run: |
-          sed -i "s/main/newWord/g" config.yml
+          sed -i "s/Repository/newWord/g" config.yml
 
 
