testing pushRequest.yml solutin

--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -18,4 +18,5 @@ jobs:
         run: |
           sed -i "s/repository/newWord/g" config.yml
 
-
+      - name: Display File Contents After Replacement
+        run: cat config.yml
