--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -19,6 +19,6 @@ jobs:
           # Commit the changes
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add path/to/example.yml
+          git add config.yml
           git commit -m "Replace 'reposetory' with 'newword' in example.yml by GitHub Actions"
           git push
