--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -15,10 +15,10 @@ jobs:
 
       - name: Replace word in YAML
         run: |
-          sed -i 's/reposetory/newword/g' config.yml
+          sed -i 's/Repository/newword/g' config.yml
           # Commit the changes
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+          git config --global user.email "fogadm06@gmial.com"
+          git config --global user.name "fogadOg"
           git add config.yml
           git commit -m "Replace 'reposetory' with 'newword' in example.yml by GitHub Actions"
           git push
