--- a/config.yml
+++ b/config.yml
@@ -1,15 +1,9 @@
-on:
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      #- name: running pull request script
-      #  uses: ./.github/actions
+      - name: Example Step
+        run: |
+          echo "This is the line you want to change"
+          # More commands or script here
