--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,13 @@
+name: My Workflow
+on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Example Step
-        run: |
-          echo "This is the line you want to change"
-          # More commands or script here
+      - uses: actions/checkout@v2
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "hello"
+          replace: "world"
+          include: "**README.md" # Will match all README.md files in any nested directory
