--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -14,4 +14,6 @@ jobs:
         with:
           find: "javaSearchEngine"
           replace: "world"
-          include: "**README.md" # Will match all README.md files in any nested directory
+          include: "**README.md"
+          debug: true  # Add this line for more verbose output
+
