--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -8,12 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Find and Replace
-        uses: jacobtomlinson/gha-find-replace@v3
+      - name: replace
+        uses: Nambers/ReplaceStringInFile@v1
         with:
-          find: "javaSearchEngine"
-          replace: "world"
-          include: "**README.md"
-          debug: true  # Add this line for more verbose output
-
+          path: config.yml
+          oldString: repository
+          oldStringWin: repository
+          newString: --_
+          showFileContent: true
