--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,49 +1,24 @@
-on: [push, workflow_dispatch]
+name: Replace Word in File
+
+on:
+  push:
+    branches:
+      - main # Change this to your branch name
 
 jobs:
-  test_replace:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - windows-latest
-          - ubuntu-latest
-    name: Test replace ${{ matrix.os }}
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-      - name: write file
-        run: echo "aaaaaabc123awabc123))ww" > ${{ github.workspace }}/a.test
-      - name: replace
-        uses: ./
-        with:
-          path: ${{ github.workspace }}/a.test
-          oldString: abc123))
-          oldStringWin: abc123\)\)
-          newString: --_
-          showFileContent: true
+  replace-word:
+    runs-on: ubuntu-latest
 
-  test_replace2:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - windows-latest
-          - ubuntu-latest
-    name: Test replace ${{ matrix.os }}
     steps:
-      - name: checkout
+      - name: Checkout code
         uses: actions/checkout@v2
-      - name: write file
-        run: echo "aaaaaabc123awabc123))ww" > ${{ github.workspace }}/a.test
-      - name: replace
-        uses: ./
+
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          path: ${{ github.workspace }}/a.test
-          oldString: abc123))
-          oldStringWin: abc123\)\)
-          escapeBackslash: true
-          newString: C:\Users\user\aaa
-          showFileContent: true
+          node-version: '14'
+
+      - name: Replace Word
+        run: |
+          npm install # If you have dependencies
+          node .github/workflows/index.js
