--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,5 +1,5 @@
 name: Replace Word in File
-
+#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
 on:
   push:
     branches:
@@ -25,8 +25,6 @@ jobs:
 
       - name: Replace Word
         run: |
-          git config --local user.email "fogadm06@gmail.com.com"
-          git config --local user.name "FogadOg"
           git add file.txt
           git commit -m "Replace 'old_word' with 'new_word'"
           git push https://FogadOg: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@github.com/FogadOg/javaSearchEngine.git HEAD:main
