--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -23,10 +23,13 @@ jobs:
           sed -i 's/oldWord/newWord/g' file.txt
 
 
-      - name: Replace Word
+      - name: Configure Git
         run: |
           git config --local user.email "fogadm06@gmail.com"
           git config --local user.name "FogadOg"
+
+      - name: Replace Word
+        run: |
           git add file.txt
           git commit -m "Replace 'old_word' with 'new_word'"
           git push https://FogadOg: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@github.com/FogadOg/javaSearchEngine.git HEAD:main
