--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -24,10 +24,10 @@ jobs:
           sed -i 's/oldWord/newWord/g' file.txt
 
 
-      - name: Configure Git
-        run: |
-          git config --local user.email "fogadm06@gmail.com"
-          git config --local user.name "FogadOg"
+      # - name: Configure Git
+      #   run: |
+      #     git config --local user.email "fogadm06@gmail.com"
+      #     git config --local user.name "FogadOg"
 
       - name: Replace Word
         run: |
