--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,18 +1,34 @@
 name: Replace Word in File
 
 on:
-  workflow_dispatch:
-    inputs:
-      newWord:
-        description: 'New word to replace in the file'
-        required: true
+  push:
+    branches:
+      - main
 
 jobs:
   replace-word:
     runs-on: ubuntu-latest
 
-    env:
-      NEW_WORD: ${{ github.event.inputs.newWord }}
+    inputs:
+      newWord:
+        description: 'The new word to put in the file'
+        required: true
+        
+      oldWord:
+        description: 'The old word to replace in the file'
+        required: true
+        
+      email:
+        description: 'your email'
+        required: true
+        
+      username:
+        description: 'your github username'
+        required: true
+        
+      file:
+        description: 'the path of the file to change'
+        required: true
 
     steps:
       - name: Checkout code
@@ -25,7 +41,7 @@ jobs:
 
       - name: Replace word in file
         run: |
-          sed -i 's/oldWord/'"$NEW_WORD"'/g' file.txt
+          sed -i 's/oldWord/${{ inputs.newWord }}/g' file.txt
 
       - name: Configure Git
         run: |
@@ -35,5 +51,5 @@ jobs:
       - name: Replace Word
         run: |
           git add file.txt
-          git commit -m "Replace 'oldWord' with '$NEW_WORD'"
+          git commit -m "Replace 'oldWord' with '${{ inputs.newWord }}'"
           git push https://FogadOg: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@github.com/FogadOg/javaSearchEngine.git HEAD:main
