--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -7,6 +7,10 @@ on:
       - main  # Change this to your branch name
 
 jobs:
+  example_matrix:
+    strategy:
+      matrix:
+        word: [you,or,it]
   replace-word:
     runs-on: ubuntu-latest
 
@@ -25,7 +29,7 @@ jobs:
 
       
         run: |
-          IFS=',' read -ra words <<< "${{ inputs.oldWords }}"
+          IFS=',' read -ra words <<< "${{ matrix.word }}"
           for word in "${words[@]}"; do
             sed -i "s/$word/newWord/g" file.txt
           done
