--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -7,10 +7,6 @@ on:
       - main  # Change this to your branch name
 
 jobs:
-  example_matrix:
-    strategy:
-      matrix:
-        word: [you,or,it]
   replace-word:
     runs-on: ubuntu-latest
 
@@ -23,16 +19,9 @@ jobs:
         with:
           python-version: '3.12.0'  # Specify your Python version here
 
-      # - name: Replace word in file
-      #   run: |
-      #     sed -i 's/oldWord/newWord/g' file.txt
-
-      
+      - name: Replace word in file
         run: |
-          IFS=',' read -ra words <<< "${{ matrix.word }}"
-          for word in "${words[@]}"; do
-            sed -i "s/$word/newWord/g" file.txt
-          done
+          sed -i 's/oldWord/newWord/g' file.txt
 
 
       - name: Configure Git
