--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -9,6 +9,13 @@ jobs:
   replace-word:
     runs-on: ubuntu-latest
 
+  strategy:
+    matrix:
+      wordsToReplace:  # Define your matrix of words here
+        - you
+        - it
+        - or
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,9 +25,15 @@ jobs:
         with:
           python-version: '3.12.0'  # Specify your Python version here
 
-      - name: Replace word in file
+      # - name: Replace word in file
+      #   run: |
+      #     sed -i 's/oldWord/newWord/g' file.txt
+
+        - name: Replace words in file
         run: |
-          sed -i 's/oldWord/newWord/g' file.txt
+          for word in ${{ matrix.wordsToReplace }}; do
+            sed -i "s/$word/newWord/g" file.txt
+          done
 
 
       - name: Configure Git
