--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -20,15 +20,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # - name: Replace word in file
-      #   run: |
-      #     sed -i 's/oldWord/newWord/g' file.txt
 
-        - name: Replace words in file
+      - name: Replace word in file
         run: |
-          for word in ${{ matrix.wordsToReplace }}; do
-            sed -i "s/$word/newWord/g" file.txt
-          done
+          sed -i 's/oldWord/newWord/g' file.txt
+
+        # - name: Replace words in file
+        # run: |
+        #   for word in ${{ matrix.wordsToReplace }}; do
+        #     sed -i "s/$word/newWord/g" file.txt
+        #   done
 
 
       - name: Configure Git
