--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -1,5 +1,6 @@
 name: Replace Word in File
 #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
+#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
 on:
   push:
     branches:
@@ -9,27 +10,18 @@ jobs:
   replace-word:
     runs-on: ubuntu-latest
 
-  strategy:
-    matrix:
-      wordsToReplace:  # Define your matrix of words here
-        - you
-        - it
-        - or
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.12.0'  # Specify your Python version here
 
       - name: Replace word in file
         run: |
           sed -i 's/newWord/newWord1/g' file.txt
-
-        # - name: Replace words in file
-        # run: |
-        #   for word in ${{ matrix.wordsToReplace }}; do
-        #     sed -i "s/$word/newWord/g" file.txt
-        #   done
 
 
       - name: Configure Git
