--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -10,6 +10,12 @@ jobs:
   replace-word:
     runs-on: ubuntu-latest
 
+    
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,7 +25,7 @@ jobs:
         with:
           python-version: '3.12.0'  # Specify your Python version here
 
-      - name: Replace word in file
+      - name: Replace word in file | ${{ matrix.node }}
         run: |
           sed -i 's/newWord/newWord1/g' file.txt
 
