testing the push action

--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         wordsToReplace:  
-          - is
+          - ${{ split(github.event.inputs.wordsToReplace, ',') }}
 
     steps:
       - name: Checkout code
