--- a/.github/workflows/pushRequest.yml
+++ b/.github/workflows/pushRequest.yml
@@ -12,8 +12,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Run the script
+      - name: Extract word from commit message
+        id: extract-word
         run: |
-          echo "Enter the word you want to substitute:"
-          read user_word
-          sed -i "s/old_word/$user_word/g" path/to/your/file.yml
+          # Get the commit message of the latest commit
+          commit_message=$(git log --format=%B -n 1 ${{ github.sha }})
+          
+          # Extract the word from the commit message (considering format: "Replace 'old_word' with 'new_word'")
+          user_word=$(echo "$commit_message" | grep -oP "(?<=with ')[^']+")
+          
+          # Use the extracted word in the sed command to replace
+          sed -i "s/old_word/$user_word/g" file.txt
